--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "lx.app.serial"
         minSdkVersion 12
         targetSdkVersion 23
         versionCode 1
@@ -17,11 +16,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+        lite {
+            applicationId "lx.app.serial.lite"
+        }
+        list {
+            applicationId "lx.app.serial"
+        }
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.0'
     compile project(':usbSerialForAndroid')
 }
