--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="lx.app.serial" >
+    package="lx.app.serial">
 
     <uses-sdk android:minSdkVersion="12" />
 
@@ -14,8 +14,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme.Holo" >
+        android:theme="@android:style/Theme.Holo">
         <activity android:name=".ConsoleSettingsActivity" >
+        </activity>
+        <activity android:name=".SettingsActivity">
         </activity>
     </application>
 
